--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      # check brew
+      - name: Check brew
+        run: brew -v
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
