--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,12 @@ jobs:
       - name: Check brew
         run: brew -v
 
+      - name: Check brew
+        run: |
+          npm i
+          npm build
+          npm test
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
