--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,27 +20,31 @@ jobs:
     # The type of runner that the job will run on
     runs-on: macos-10.15
 
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
 
-      # check brew
-      - name: Check brew
-        run: brew -v
+      - name: Install dependencies
+        run: npm i
 
-      - name: Check brew
-        run: |
-          npm i
-          npm build
-          npm test
+      - name: Run the Test
+        run: npm test -- --coverage
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Build
+        run: npm build
+
+      # # Runs a set of commands using the runners shell
+      # - name: Run a multi-line script
+      #   run: |
+      #     echo Add other actions to build,
+      #     echo test, and deploy your project.
