--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,14 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [master]
+    branches:
+      - master
+      - release/**
+
   pull_request:
-    branches: [master]
+    branches:
+      - master
+      - release/**
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
