--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ on:
     branches:
       - master
       - release/**
-      - feature/**
 
   pull_request:
     types:
@@ -43,7 +42,7 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
           echo "$GITHUB_CONTEXT"
-          echo ${{ github.event.pull_request.title }}
+          echo ${{ github.event.pull_request.head.ref }}
       # - name: Set up Node.js ${{ matrix.node-version }}
       #   uses: actions/setup-node@v1
       #   with:
