--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - master
       - release/**
+      - test
 
   pull_request:
     types:
@@ -41,8 +42,10 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
-          echo "$GITHUB_CONTEXT"
           echo ${{ github.event.pull_request.head.ref }}
+          echo ${{ github.head_ref }}
+          echo ${{ github.event_name }}
+
       # - name: Set up Node.js ${{ matrix.node-version }}
       #   uses: actions/setup-node@v1
       #   with:
