--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ on:
       - opened
       - synchronize
 
+  env:
+    GITHUB_CONTEXT: ${{ toJson(github) }}
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -36,12 +39,17 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: echo branch
-        run: echo ${GITHUB_REF##*/}
+        if: github.event_name == 'push'
+        run: |
+          echo On push
+          echo ${GITHUB_REF##*/}
+          echo ${{ github.head_ref }}
+          echo ${{ github.event_name }}
 
       - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
+        if: github.event_name == 'pull_request'
         run: |
+          echo On Pull Request
           echo ${{ github.event.pull_request.head.ref }}
           echo ${{ github.head_ref }}
           echo ${{ github.event_name }}
