--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@
 name: CI
 
 # Controls when the action will run.
-
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -22,32 +21,34 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # The type of runner that the job will run on
+  runs-on: macos-10.15
+  strategy:
+    matrix:
+      node-version: [12.x]
+
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: macos-10.15
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+
+      # - name: Dump GitHub context
+      #   env:
+      #     GITHUB_CONTEXT: ${{ toJson(github) }}
+      #   run: echo "$GITHUB_CONTEXT"
 
       - name: echo branch
         if: github.event_name == 'push'
         run: |
           echo On push
           echo ${GITHUB_REF##*/}
-          echo ${{ github.head_ref }}
 
       - name: Dump GitHub context
         if: github.event_name == 'pull_request'
         run: |
           echo On Pull Request
-          echo ${{ github.event.pull_request.head.ref }}
           echo ${{ github.head_ref }}
 
       # - name: Set up Node.js ${{ matrix.node-version }}
@@ -69,3 +70,5 @@ jobs:
       #   run: |
       #     echo Add other actions to build,
       #     echo test, and deploy your project.
+
+  test:
