--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,14 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # The type of runner that the job will run on
-  runs-on: macos-10.15
-  strategy:
-    matrix:
-      node-version: [12.x]
-
   # This workflow contains a single job called "build"
   build:
+    if: github.event_name == 'push'
+    # The type of runner that the job will run on
+    runs-on: macos-10.15
+    strategy:
+      matrix:
+        node-version: [12.x]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -72,3 +72,13 @@ jobs:
       #     echo test, and deploy your project.
 
   test:
+    if: github.event_name == 'pull_request'
+    # The type of runner that the job will run on
+    runs-on: macos-10.15
+    strategy:
+      matrix:
+        node-version: [12.x]
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
