--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,11 +58,11 @@ jobs:
           cache-name: cache-node-modules
         with:
           path: node_modules
-          key: npm-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          key: node_modules-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            npm-${{ runner.os }}-build-${{ env.cache-name }}-
-            npm-${{ runner.os }}-build-
-            npm-${{ runner.os }}-
+            node_modules-${{ runner.os }}-build-${{ env.cache-name }}-
+            node_modules-${{ runner.os }}-build-
+            node_modules-${{ runner.os }}-
 
       - name: Install Dependencies
         run: npm i
