--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,18 +40,18 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # - name: Cache node modules
-      #   uses: actions/cache@v2
-      #   env:
-      #     cache-name: cache-node-modules
-      #   with:
-      #     path: ~/.npm
-      #     key: npm-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       npm-${{ runner.os }}-build-${{ env.cache-name }}-
-      #       npm-${{ runner.os }}-build-
-      #       npm-${{ runner.os }}-
-      #
+      - name: Cache npm
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-npm
+        with:
+          path: ~/.npm
+          key: npm-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            npm-${{ runner.os }}-build-${{ env.cache-name }}-
+            npm-${{ runner.os }}-build-
+            npm-${{ runner.os }}-
+
       - name: Cache node modules
         uses: actions/cache@v2
         env:
