--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           echo On push
           echo ${GITHUB_REF##*/}
+          echo "$GITHUB_CONTEXT"
 
       - name: Dump GitHub context
         if: github.event_name == 'pull_request'
