--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ name: Test
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches:
+    branches-ignore:
       - master
       - release/**
       - test
