--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,21 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  head_commit:
+    runs-on: macos-10.15
+    outputs:
+      head_commit: ${{ steps.head_commit.outputs.head_commit }}
+    steps:
+      - name:
+        id: head_commit
+        run: |
+          echo ${git log -1 --pretty=format:"%s"}
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: macos-10.15
+    needs: skipci
 
     strategy:
       matrix:
