--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,11 @@ name: Test
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches-ignore:
-      - master
-      - release/**
-      - test
+  # push:
+  #   branches-ignore:
+  #     - master
+  #     - release/**
+  #     - test
 
   pull_request:
     types:
