--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Main
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  # push:
+  push:
   #   branches:
   #     - master
   #     - release/**
